+ Added Sign Up Form + Added Nav Bar (need to fix alignments + add/fix buttons)

--- a/HTML/CSS/style.css
+++ b/HTML/CSS/style.css
@@ -6,7 +6,8 @@
 /*   .class    */ /*     .intro     */ /*   Selects all elements with class="intro"      */
 /*   .class    */ /*    p.intro    */ /*  Selects all <p> elements with class="intro"   */
 
-body{
+html{
+    background-color:#f2f4f8;
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
@@ -15,9 +16,39 @@ body{
     padding: 0;
     height: 100vh;
     width: 100vw;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter', sans-serif; 
+}
+
+h3.uk-card-title{    
+    font-family: 'Roboto',sans-serif;
+    font-weight: 800;
+    font-size: 42px;
+    color:#21272A;
 }
 
 p{
-    font-family: 'Inter', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    color: #666;
 }
+
+.create-acc-card{
+    width: 750px; 
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-top: 40px;
+    padding-bottom: 55px;
+}
+
+::placeholder{
+    font-size: 13px;
+}
+
+.signup-btn-div{
+    margin-top: 50px !important; 
+}
+
+.login-redirect-txt{
+    width: inherit;
+}
+
+
